# puzzle-informed-solver

./: .clang-format  CMakeLists.txt  a_star.py  greedy.py  main.py
solver/: __init__.py  solver.py
solver/a_star/: a_star.py
solver/greedy/: greedy.py
src/: main.cpp
src/board/: CMakeLists.txt  board.cpp  board.hpp
src/direction/: CMakeLists.txt  direction.hpp
src/heap/: CMakeLists.txt  heap.cpp  heap.hpp
src/heap/node/: CMakeLists.txt  node.cpp  node.hpp
src/solver/: solver.cpp  solver.hpp
src/solver/greedy/: CMakeLists.txt  greedy.cpp  greedy.hpp
state/: state.py
